# shortener

./: .gitignore  Makefile  README.md  pyproject.toml
shortener/: config.py  crud.py  database.py  keygen.py  main.py  schemas.py
