[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["Adebayo <aakinlalu@airmaster.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
validators = "^0.34.0"
uvicorn = "^0.34.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
